--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <option value="Warszawa">Warszawa</option>
         <option value="Gdansk">Gdansk</option>
     </select><br /><br />
-    <input type="radio" id="female" name="gender" value="Kobieta" > Kobieta
-    <input type="radio" id="male" name="gender" value="Mezczyzna"> Mezczyzna <br /><br />
+    <label>Kobieta:<input type="radio" id="female" name="gender" value="Kobieta" ></label> 
+    <label>Mezczyzna:<input type="radio" id="male" name="gender" value="Mezczyzna"></label> <br /><br />
     <input type="checkbox" name="agreement"> Wyrazam zgode na przetwarzanie moich danych <br /><br />
     <textarea name="message"></textarea><br /><br />
     <input type="submit" value="Wyslij">
