--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </select><br /><br />
     <label>Kobieta:<input type="radio" id="female" name="gender" value="Kobieta" ></label> 
     <label>Mezczyzna:<input type="radio" id="male" name="gender" value="Mezczyzna"></label> <br /><br />
-    <input type="checkbox" name="agreement"> Wyrazam zgode na przetwarzanie moich danych <br /><br />
+    <label>Wyrazam zgode na przetwarzanie moich danych  <input type="checkbox" name="agreement"></label> <br /><br />
     <textarea name="message"></textarea><br /><br />
     <input type="submit" value="Wyslij">
 </form>
